<resources>
    <string name="app_name">PotatoGaming</string>
    <string name="CustomerName">Customer Name</string>
    <string name="CustomerAge">Age</string>
    <string name="ActiveCustomer">Active Customer</string>
    <string name="ViewAll">View All</string>
    <string name="Add">Add</string>
    <string name="CustomerPage">CustomerPage</string>
    <string name="description">Description</string>
    <string name="game_title">Game Title</string>
    <string name="price">Price</string>
    <string name="platform">Platform</string>
    <string name="developer">Developer</string>
    <string name="todo">TODO</string>
    <string name="title">Title</string>
    <string name="request">Request</string>
    <string name="select_image">Select Image</string>
    <string name="game_description">Game Description</string>
    <string name="potato_gaming">Potato Gaming</string>
    <string name="search">Search</string>
    <string name="game_request_list">Game Request List</string>
    <string name="topSeller">Top Sellers</string>
    <string name="newRelease">New Releases</string>
    <string name="txt_Label">Game Requests</string>
    <string name="txtLabel">Customer List</string>
    <string name="ps4_label">PS4 Games</string>
    <string name="xbox_label">XBOX Games</string>
    <string name="cart_label">Checkout Cart</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="remove">Remove</string>
    <string name="title_activity_current_location">Map</string>
    <string name="current_location">Current Location</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="update_request">Update Request</string>
</resources>