<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".localDatabase">

    <TextView
        android:id="@+id/txtlabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/txtLabel"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/sw_Active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="120dp"
        android:text="@string/ActiveCustomer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btn_Viewall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="150dp"
        android:text="@string/ViewAll"
        app:layout_constraintEnd_toStartOf="@+id/btn_Add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_Active"
        android:background="@drawable/round_button"/>

    <Button
        android:id="@+id/btn_Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="70dp"
        android:text="@string/Add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_Viewall"
        app:layout_constraintTop_toTopOf="@+id/btn_Viewall"
        android:background="@drawable/round_button"/>

    <ListView
        android:id="@+id/lv_customerList"
        android:layout_width="409dp"
        android:layout_height="520dp"
        android:layout_below="@+id/sw_Active"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="53dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Viewall" />

    <EditText
        android:id="@+id/et_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="Age"
        android:inputType="number"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        android:textAlignment="center" />
</RelativeLayout>