<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/item1"
        android:title=""
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/item2"
        android:title="Game Request List"
        app:showAsAction="never"
        />
    <item android:id="@+id/item3"
        android:title="Customer List"
        app:showAsAction="never"
        />
    <item android:id="@+id/item4"
        android:title="Game Category"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/subitem1"
                android:title="PS4"
                />
            <item android:id="@+id/subitem2"
                android:title="XBOX"
                />
        </menu>
    </item>
    <item android:id="@+id/item5"
        android:title="Current Location"
        app:showAsAction="never"
        />
    <item android:id="@+id/item6"
        android:title="Cart"
        app:showAsAction="never"
        />
</menu>